Cleaned up large html pages

--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,14 @@
     <head>
         <title>Contact</title>
         <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="author" content="David Buzzell">
         <meta name="keywords" content="david buzzell">
         <meta name="description" content="Online Resume for David A. Buzzell">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="./main.css">
@@ -22,11 +23,13 @@
             </div>
 
             <div class="row">
-                <div class="btn-group btn-group-justified">
-                    <a href="./index.html" class="btn btn-primary">Home</a>
-                    <a href="./resume.html" class="btn btn-primary">Resume</a>
-                    <a href="./projects.html" class="btn btn-primary">Projects</a>
-                    <a href="./contact.html" class="btn btn-primary active">Contact</a>
+                <div class="col-sm-12">
+                    <div class="btn-group btn-group-justified">
+                        <a href="./index.html" class="btn btn-primary">Home</a>
+                        <a href="./resume.html" class="btn btn-primary">Resume</a>
+                        <a href="./projects.html" class="btn btn-primary">Projects</a>
+                        <a href="./contact.html" class="btn btn-primary active">Contact</a>
+                    </div>
                 </div>
             </div>
 
