--- a/projects/ece-capstone.html
+++ b/projects/ece-capstone.html
@@ -3,13 +3,14 @@
     <head>
         <title>Project - Electrical and Computer Engineering Capstone</title>
         <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="author" content="David Buzzell">
         <meta name="keywords" content="david buzzell">
         <meta name="description" content="Online Resume for David A. Buzzell">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
         <link rel="stylesheet" type="text/css" href="../main.css">
         <link rel="shortcut icon" href="../favicon.ico">
@@ -22,32 +23,38 @@
             </div>
 
             <div class="row">
-                <div class="btn-group btn-group-justified">
-                    <a href="../index.html" class="btn btn-primary">Home</a>
-                    <a href="../resume.html" class="btn btn-primary">Resume</a>
-                    <a href="../projects.html" class="btn btn-primary">Projects</a>
-                    <a href="../contact.html" class="btn btn-primary">Contact</a>
+                <div class="col-sm-12">
+                    <div class="btn-group btn-group-justified">
+                        <a href="../index.html" class="btn btn-primary">Home</a>
+                        <a href="../resume.html" class="btn btn-primary">Resume</a>
+                        <a href="../projects.html" class="btn btn-primary">Projects</a>
+                        <a href="../contact.html" class="btn btn-primary">Contact</a>
+                    </div>
                 </div>
             </div>
 
             <div class="row">
+                <div class="col-lg-12">
                     <h1 class="centered-head small-head">3D Object Reconstruction</h1>
                     <h3 class="centered-head">Electrical and Computer Engineering Capstone Project</h3>
+                </div>
             </div>
 
             <div class="row">
-                <p class="project-text">
-                    As part of our Electrical and Computer Engineering degree program, we completed a group Capstone project that needed
-                    use signal processing and/or pattern recognition in its solution. Our project used point capture technology
-                    to obtain depth points for real world objects, and then process them to create 3D mesh models inside a virtual
-                    environment. This project used Nearest Neighbor Filtering, Multiple Viewpoint Registration, Euclidean Clustering
-                    for Segmentation, and Fast Triangulation Meshing.<br />
-                    <br />
-                    Below is our presentation materials, including the
-                    <strong><a href="../documents/resume-website/final-report.pdf">Final Report</a></strong>,
-                    <strong><a href="../documents/resume-website/final-project-presentation.pdf">Final Presentation</a></strong>, and
-                    <strong><a href="../documents/resume-website/final-poster.pdf">Final Poster</a></strong>.
-                </p>
+                <div class="col-lg-12">
+                    <p class="project-text">
+                        As part of our Electrical and Computer Engineering degree program, we completed a group Capstone project that needed
+                        use signal processing and/or pattern recognition in its solution. Our project used point capture technology
+                        to obtain depth points for real world objects, and then process them to create 3D mesh models inside a virtual
+                        environment. This project used Nearest Neighbor Filtering, Multiple Viewpoint Registration, Euclidean Clustering
+                        for Segmentation, and Fast Triangulation Meshing.<br />
+                        <br />
+                        Below is our presentation materials, including the
+                        <strong><a href="../documents/resume-website/final-report.pdf">Final Report</a></strong>,
+                        <strong><a href="../documents/resume-website/final-project-presentation.pdf">Final Presentation</a></strong>, and
+                        <strong><a href="../documents/resume-website/final-poster.pdf">Final Poster</a></strong>.
+                    </p>
+                </div>
             </div>
 
             <div class="row">
