--- a/projects/non-contact-eeg.html
+++ b/projects/non-contact-eeg.html
@@ -3,13 +3,14 @@
     <head>
         <title>Project - Non-Contact Electrode EEG System</title>
         <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="author" content="David Buzzell">
         <meta name="keywords" content="david buzzell">
         <meta name="description" content="Online Resume for David A. Buzzell">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
         <link rel="stylesheet" type="text/css" href="../main.css">
         <link rel="shortcut icon" href="../favicon.ico">
@@ -22,40 +23,46 @@
             </div>
 
             <div class="row">
-                <div class="btn-group btn-group-justified">
-                    <a href="../index.html" class="btn btn-primary">Home</a>
-                    <a href="../resume.html" class="btn btn-primary">Resume</a>
-                    <a href="../projects.html" class="btn btn-primary">Projects</a>
-                    <a href="../contact.html" class="btn btn-primary">Contact</a>
+                <div class="col-sm-12">
+                    <div class="btn-group btn-group-justified">
+                        <a href="../index.html" class="btn btn-primary">Home</a>
+                        <a href="../resume.html" class="btn btn-primary">Resume</a>
+                        <a href="../projects.html" class="btn btn-primary">Projects</a>
+                        <a href="../contact.html" class="btn btn-primary">Contact</a>
+                    </div>
                 </div>
             </div>
 
             <div class="row">
+                <div class="col-lg-12">
                     <h1 class="centered-head small-head">Non-Contact/Wireless EEG Electrode System</h1>
                     <h3 class="centered-head">Summer Research Project</h3>
+                </div>
             </div>
 
             <div class="row">
-                <p class="project-text">
-                    During the Summer of 2016, I got the opportunity to work on a research team interested in innovating the modern EEG/ECG system.
-                    The team I joined in particular was focused on designing new electrodes (the contact points on the user's head) that were
-                    "wireless". Current electrode designs on the market are usually either dry (direct metal contacts that poke at the user's scalp)
-                    or wet (conductive gel is lubricated onto the user's scalp and the metal electrodes), which are painful, sticky, or
-                    otherwise uncomfortable for hours of data recording.<br />
-                    <br />
-                    The "wireless" electrode design is a flat, conductive device (similar in size to a U.S. quarter coin) that is placed on the
-                    user's head on top of their hair, which is a much more comfortable experience and easier to set up. Since there is no direct
-                    contact between the electrode and the scalp, this electrode "wirelessly" records the user's brainwave activity using an
-                    ultra-high impedance amplifier for strong capacitative coupling. From there, the electrode sends the voltage levels (after
-                    some noise rejection and analog-to-digital conversion) to a host microcontroller that reports the data in a graphical program,
-                    allowing researchers to test for brainwave patterns and health issues.<br />
-                    <br />
-                    Below are links to some of the diagrams and findings for this project. This includes the
-                    <strong><a href="../documents/resume-website/design-presentation.pdf">Design Presentation</a></strong> used for our large team meetings, the
-                    <strong><a href="../documents/resume-website/shopping-list-for-lab-meeting-presentation.pdf">Parts Presentation</a></strong> that details exactly the components required for our proposed system, and the
-                    <strong><a href="https://github.com/xhamyd/NonContactElectrode">EAGLE Design Files</a></strong> to demonstrate the assembly of the electrode circuitry.
-                    Beneath that is an image slideshow of some of the graphics created to illustrate our electrode design.
-                </p>
+                <div class="col-lg-12">
+                    <p class="project-text">
+                        During the Summer of 2016, I got the opportunity to work on a research team interested in innovating the modern EEG/ECG system.
+                        The team I joined in particular was focused on designing new electrodes (the contact points on the user's head) that were
+                        "wireless". Current electrode designs on the market are usually either dry (direct metal contacts that poke at the user's scalp)
+                        or wet (conductive gel is lubricated onto the user's scalp and the metal electrodes), which are painful, sticky, or
+                        otherwise uncomfortable for hours of data recording.<br />
+                        <br />
+                        The "wireless" electrode design is a flat, conductive device (similar in size to a U.S. quarter coin) that is placed on the
+                        user's head on top of their hair, which is a much more comfortable experience and easier to set up. Since there is no direct
+                        contact between the electrode and the scalp, this electrode "wirelessly" records the user's brainwave activity using an
+                        ultra-high impedance amplifier for strong capacitative coupling. From there, the electrode sends the voltage levels (after
+                        some noise rejection and analog-to-digital conversion) to a host microcontroller that reports the data in a graphical program,
+                        allowing researchers to test for brainwave patterns and health issues.<br />
+                        <br />
+                        Below are links to some of the diagrams and findings for this project. This includes the
+                        <strong><a href="../documents/resume-website/design-presentation.pdf">Design Presentation</a></strong> used for our large team meetings, the
+                        <strong><a href="../documents/resume-website/shopping-list-for-lab-meeting-presentation.pdf">Parts Presentation</a></strong> that details exactly the components required for our proposed system, and the
+                        <strong><a href="https://github.com/xhamyd/NonContactElectrode">EAGLE Design Files</a></strong> to demonstrate the assembly of the electrode circuitry.
+                        Beneath that is an image slideshow of some of the graphics created to illustrate our electrode design.
+                    </p>
+                </div>
             </div>
 
             <div class="row">
@@ -86,7 +93,9 @@
             </div>
 
             <div class="row projectrow">
-                <h2 class="centered-head">Some design files from lab presentation</h2>
+                <div class="col-lg-12">
+                    <h2 class="centered-head">Some design files from lab presentation</h2>
+                </div>
             </div>
 
             <div id="myCarousel" class="carousel slide" data-interval="false">
