--- a/projects/orchestration-final-project.html
+++ b/projects/orchestration-final-project.html
@@ -3,13 +3,14 @@
     <head>
         <title>Project - Orchestration Final Project</title>
         <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="author" content="David Buzzell">
         <meta name="keywords" content="david buzzell">
         <meta name="description" content="Online Resume for David A. Buzzell">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
         <link rel="stylesheet" type="text/css" href="../main.css">
         <link rel="shortcut icon" href="../favicon.ico">
@@ -22,34 +23,40 @@
             </div>
 
             <div class="row">
-                <div class="btn-group btn-group-justified">
-                    <a href="../index.html" class="btn btn-primary">Home</a>
-                    <a href="../resume.html" class="btn btn-primary">Resume</a>
-                    <a href="../projects.html" class="btn btn-primary">Projects</a>
-                    <a href="../contact.html" class="btn btn-primary">Contact</a>
+                <div class="col-sm-12">
+                    <div class="btn-group btn-group-justified">
+                        <a href="../index.html" class="btn btn-primary">Home</a>
+                        <a href="../resume.html" class="btn btn-primary">Resume</a>
+                        <a href="../projects.html" class="btn btn-primary">Projects</a>
+                        <a href="../contact.html" class="btn btn-primary">Contact</a>
+                    </div>
                 </div>
             </div>
 
             <div class="row">
+                <div class="col-lg-12">
                     <h1 class="centered-head small-head">Large Symphonic Orchestration with Audio Sampling and Synthesis</h1>
                     <h3 class="centered-head">Orchestration Final Project</h3>
+                </div>
             </div>
 
             <div class="row">
-                <p class="project-text">
-                    As part of my Music and Technology degree, I took a class on Orchestration, or the art of arranging a musical work
-                    for a large symphonic orchestra. In addition to learning about the different instrument classes and the proper notation
-                    for each instrument, this class also explored modern sampling libraries (eg.
-                    <a href="http://www.spitfireaudio.com/shop/a-z/albion-one/" target="_blank">Spitfire Audio's Albion One</a>) and audio editing
-                    software (eg. <a href="https://www.ableton.com/en/live/" target="_blank">Ableton Live</a>) since modern orchestrators tend to
-                    synthesize their projects as high quality as possible before getting a live orchestra to play and record the symphonic work.<br />
-                    <br />
-                    With this knowledge and practice, I completed a final project that took the basics of a melody line (created by the
-                    professor), and transformed it to a large, 34-part orchestral work. Below are links to the
-                    <strong><a href="../documents/resume-website/final-project-orchestration.pdf">Sheet Music</a></strong> and a
-                    <strong><a href="https://www.youtube.com/watch?v=n1Kp4D6ud14">Video</a></strong>
-                    which contains the synthesized audio recording along with the sheet music, scrolling in time with the recording.
-                </p>
+                <div class="col-lg-12">
+                    <p class="project-text">
+                        As part of my Music and Technology degree, I took a class on Orchestration, or the art of arranging a musical work
+                        for a large symphonic orchestra. In addition to learning about the different instrument classes and the proper notation
+                        for each instrument, this class also explored modern sampling libraries (eg.
+                        <a href="http://www.spitfireaudio.com/shop/a-z/albion-one/" target="_blank">Spitfire Audio's Albion One</a>) and audio editing
+                        software (eg. <a href="https://www.ableton.com/en/live/" target="_blank">Ableton Live</a>) since modern orchestrators tend to
+                        synthesize their projects as high quality as possible before getting a live orchestra to play and record the symphonic work.<br />
+                        <br />
+                        With this knowledge and practice, I completed a final project that took the basics of a melody line (created by the
+                        professor), and transformed it to a large, 34-part orchestral work. Below are links to the
+                        <strong><a href="../documents/resume-website/final-project-orchestration.pdf">Sheet Music</a></strong> and a
+                        <strong><a href="https://www.youtube.com/watch?v=n1Kp4D6ud14">Video</a></strong>
+                        which contains the synthesized audio recording along with the sheet music, scrolling in time with the recording.
+                    </p>
+                </div>
             </div>
 
             <div class="row">
