--- a/resume.html
+++ b/resume.html
@@ -3,13 +3,14 @@
 <head>
     <title>Resume</title>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="David Buzzell">
     <meta name="keywords" content="david buzzell">
     <meta name="description" content="Online Resume for David A. Buzzell">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
     <link rel="stylesheet" type="text/css" href="./main.css">
     <link rel="shortcut icon" href="./favicon.ico">
@@ -24,11 +25,13 @@
         </div>
 
         <div class="row">
-            <div class="btn-group btn-group-justified">
-                <a href="./index.html" class="btn btn-primary">Home</a>
-                <a href="./resume.html" class="btn btn-primary active">Resume</a>
-                <a href="./projects.html" class="btn btn-primary">Projects</a>
-                <a href="./contact.html" class="btn btn-primary">Contact</a>
+            <div class="col-sm-12">
+                <div class="btn-group btn-group-justified">
+                    <a href="./index.html" class="btn btn-primary">Home</a>
+                    <a href="./resume.html" class="btn btn-primary active">Resume</a>
+                    <a href="./projects.html" class="btn btn-primary">Projects</a>
+                    <a href="./contact.html" class="btn btn-primary">Contact</a>
+                </div>
             </div>
         </div>
 
@@ -72,8 +75,7 @@
         </div>
     </div>
     <div class="row middle-row">
-        <div class="col-sm-3"></div>
-        <div class="col-sm-7">
+        <div class="col-sm-offset-3 col-sm-7">
             <div class="inner-text">
                 <strong><a class="discrete-links" href="./projects/ece-capstone.html">3D Object Reconstruction</a></strong> (Electrical and Computer Engineering Capstone)
                 <ul>
@@ -89,8 +91,7 @@
         </div>
     </div>
     <div class="row bottom-row">
-        <div class="col-sm-3"></div>
-        <div class="col-sm-7">
+        <div class="col-sm-offset-3 col-sm-7">
             <div class="inner-text">
                 <strong><a class="discrete-links" href="#embedded-project-link">Embedded Real-Time Operating System</a></strong> (18-349 Final Class Project)
                 <ul>
@@ -126,8 +127,7 @@
         </div>
     </div>
     <div class="row bottom-row">
-        <div class="col-sm-3"></div>
-        <div class="col-sm-7">
+        <div class="col-sm-offset-3 col-sm-7">
             <div class="inner-text">
                 <strong><a class="discrete-links" href="./projects/hybrid-instruments.html">Hybrid Instruments</a></strong> - Carnegie Mellon University
                 <ul>
@@ -221,8 +221,7 @@
     </div>
 
     <div class="row bottom-row">
-        <div class="col-sm-3"></div>
-        <div class="col-sm-7">
+        <div class="col-sm-offset-3 col-sm-7">
             <div class="inner-text">
                 <!-- Deewane link: "https://www.youtube.com/watch?v=cnUSNFpU7Kw" -->
                 <strong><a class="discrete-links" href="#deewane-link">Music Director - Deewane a Cappella</a></strong>
