--- a/projects/music-generation-tool.html
+++ b/projects/music-generation-tool.html
@@ -3,13 +3,14 @@
     <head>
         <title>Project - Music Generation Tool</title>
         <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="author" content="David Buzzell">
         <meta name="keywords" content="david buzzell">
         <meta name="description" content="Online Resume for David A. Buzzell">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
         <link rel="stylesheet" type="text/css" href="../main.css">
         <link rel="shortcut icon" href="../favicon.ico">
@@ -22,32 +23,38 @@
             </div>
 
             <div class="row">
-                <div class="btn-group btn-group-justified">
-                    <a href="../index.html" class="btn btn-primary">Home</a>
-                    <a href="../resume.html" class="btn btn-primary">Resume</a>
-                    <a href="../projects.html" class="btn btn-primary">Projects</a>
-                    <a href="../contact.html" class="btn btn-primary">Contact</a>
+                <div class="col-sm-12">
+                    <div class="btn-group btn-group-justified">
+                        <a href="../index.html" class="btn btn-primary">Home</a>
+                        <a href="../resume.html" class="btn btn-primary">Resume</a>
+                        <a href="../projects.html" class="btn btn-primary">Projects</a>
+                        <a href="../contact.html" class="btn btn-primary">Contact</a>
+                    </div>
                 </div>
             </div>
 
             <div class="row">
+                <div class="col-lg-12">
                     <h1 class="centered-head small-head">Music Generation Tool</h1>
                     <h3 class="centered-head">15-112 Term Project</h3>
+                </div>
             </div>
 
             <div class="row">
-                <p class="project-text">
-                    My Intro to Programming Final Project is one of my earliest projects that explored the intersection between music and technology.
-                    This tool accepts user input through a graphical piano keyboard, and then takes the musical measure of input and
-                    implements recursive backtracking to randomly generate the remaining measures of music to play back to you.<br />
-                    <br />
-                    Below is a link to the
-                    <strong><a href="https://github.com/xhamyd/term-project">Github repo</a></strong> that details each part of this project,
-                    including code files, documentation, timesheet of hours spent on each part, and how to setup and run the project. Next to that
-                    link is a
-                    <strong><a href="https://www.youtube.com/watch?v=hdQuuhRBFQE">video presentation</a></strong>,
-                    submitted alongside the project files.
-                </p>
+                <div class="col-lg-12">
+                    <p class="project-text">
+                        My Intro to Programming Final Project is one of my earliest projects that explored the intersection between music and technology.
+                        This tool accepts user input through a graphical piano keyboard, and then takes the musical measure of input and
+                        implements recursive backtracking to randomly generate the remaining measures of music to play back to you.<br />
+                        <br />
+                        Below is a link to the
+                        <strong><a href="https://github.com/xhamyd/term-project">Github repo</a></strong> that details each part of this project,
+                        including code files, documentation, timesheet of hours spent on each part, and how to setup and run the project. Next to that
+                        link is a
+                        <strong><a href="https://www.youtube.com/watch?v=hdQuuhRBFQE">video presentation</a></strong>,
+                        submitted alongside the project files.
+                    </p>
+                </div>
             </div>
 
             <div class="row">
