--- a/projects/music-tech-capstone.html
+++ b/projects/music-tech-capstone.html
@@ -3,13 +3,14 @@
     <head>
         <title>Project - Music and Techology Capstone</title>
         <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="author" content="David Buzzell">
         <meta name="keywords" content="david buzzell">
         <meta name="description" content="Online Resume for David A. Buzzell">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Encode+Sans:300,500,700">
         <link rel="stylesheet" type="text/css" href="../main.css">
         <link rel="shortcut icon" href="../favicon.ico">
@@ -22,31 +23,37 @@
             </div>
 
             <div class="row">
-                <div class="btn-group btn-group-justified">
-                    <a href="../index.html" class="btn btn-primary">Home</a>
-                    <a href="../resume.html" class="btn btn-primary">Resume</a>
-                    <a href="../projects.html" class="btn btn-primary">Projects</a>
-                    <a href="../contact.html" class="btn btn-primary">Contact</a>
+                <div class="col-sm-12">
+                    <div class="btn-group btn-group-justified">
+                        <a href="../index.html" class="btn btn-primary">Home</a>
+                        <a href="../resume.html" class="btn btn-primary">Resume</a>
+                        <a href="../projects.html" class="btn btn-primary">Projects</a>
+                        <a href="../contact.html" class="btn btn-primary">Contact</a>
+                    </div>
                 </div>
             </div>
 
             <div class="row">
+                <div class="col-lg-12">
                     <h1 class="centered-head small-head">Depth-Controlled Spatial Audio with High Order Ambisonics in a Speaker Ring</h1>
                     <h3 class="centered-head">Music and Technology Capstone Project</h3>
+                </div>
             </div>
 
             <div class="row">
-                <p class="project-text">
-                    For my Music and Technology degree, I completed an individual "Capstone-like" project that combined
-                    music with technology. This project is a system that incorporates depth-tracking and ambisonic audio to allow
-                    the user to accurately control an audio source's origin and intensity in a circular plane, as produced by a 360&deg;
-                    speaker ring.<br />
-                    <br />
-                    Below is a link to the materials used in the presentation of this project, including a
-                    <strong><a href="../documents/resume-website/music-technology-project-writeup.pdf">Project Writeup (PDF)</a></strong> and
-                    <strong><a href="https://www.youtube.com/watch?v=XfvVWxyaobQ">Video Demonstration</a></strong>
-                    for viewers that were unable to attend the live demonstration of this system.
-                </p>
+                <div class="col-lg-12">
+                    <p class="project-text">
+                        For my Music and Technology degree, I completed an individual "Capstone-like" project that combined
+                        music with technology. This project is a system that incorporates depth-tracking and ambisonic audio to allow
+                        the user to accurately control an audio source's origin and intensity in a circular plane, as produced by a 360&deg;
+                        speaker ring.<br />
+                        <br />
+                        Below is a link to the materials used in the presentation of this project, including a
+                        <strong><a href="../documents/resume-website/music-technology-project-writeup.pdf">Project Writeup (PDF)</a></strong> and
+                        <strong><a href="https://www.youtube.com/watch?v=XfvVWxyaobQ">Video Demonstration</a></strong>
+                        for viewers that were unable to attend the live demonstration of this system.
+                    </p>
+                </div>
             </div>
 
             <div class="row">
