--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Resume</title>
     <meta charset="utf-8">
@@ -48,7 +48,7 @@
             </div>
             <div class="col-sm-2">
                 <div class="inner-text">
-                </br />
+                <br />
                 <em>May 2017</em><br />
                 <em>August 2017</em>
             </div>
