Quick updates to test FTP deployment

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
 <!-- Welcome to my Online Resume Website!
      All of the HTML, CSS, and Bootstrap code I learned independently from online tutorials.
-     This page is currently hosted by GitHub Pages, and the domain was purchased from Namecheap.
-     This site was last updated on Sunday, May 12th @ 7:51 PM (EST) -->
+     This page is currently hosted by Namecheap, and the domain was purchased from Namecheap.
+     This site was last updated on Thursday, March 19th, 2020 @ 11:36 AM (EDT) -->
 
 <html>
     <head>
