--- a/projects.html
+++ b/projects.html
@@ -35,15 +35,15 @@
 
             <div class="row">
                 <figure class="col-sm-4">
-                    <h1 class="centered-head small-head">Capstone Projects</h2>
+                    <h1 class="centered-head small-head">Capstone Projects</h1>
                 </figure>
 
                 <figure class="col-sm-4">
-                    <h1 class="centered-head small-head">Research</h2>
+                    <h1 class="centered-head small-head">Research</h1>
                 </figure>
 
                 <figure class="col-sm-4">
-                    <h1 class="centered-head small-head">Music</h2>
+                    <h1 class="centered-head small-head">Music</h1>
                 </figure>
             </div>
 
@@ -60,7 +60,8 @@
                                         <br />
                                         <br />
                                         <br />
-                                        A depth-controlled system that affects position and gain of audio sources, using<br />
+                                        A depth-controlled system that affects position and gain of audio sources, using
+                                        <br />
                                         High Order Ambisonics, in a speaker ring
                                     </p>
                                 </div>
